<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/ab_filter_price_lowest"
            android:title="@string/ab_filter_price_lowest"
            app:showAsAction="never"
            android:visible="false"
    />

    <item
            android:id="@+id/ab_filter_price_highest"
            android:title="@string/ab_filter_price_highest"
            app:showAsAction="never"
            android:visible="false"
    />

    <item
            android:id="@+id/ab_filter_distance"
            android:title="@string/ab_filter_distance"
            app:showAsAction="never"
            android:visible="false"
    />

    <item
            android:id="@+id/ab_filter_newest"
            android:title="@string/ab_filter_recent"
            app:showAsAction="never"
            android:visible="false"
    />


</menu>